--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-      <h1>Unlimited movies, TV shows and more.</h1>
+      <h1>BHOnDu</h1>
       <h2>Watch anywhere. Cancel anytime.</h2>
       <p>Ready to watch? Enter your email to create or restart your membership.</p>
 
